feat: delete product from buyers'cart
