# internal/controller/buyer_controller.go
@@ -16,6 +16,7 @@ type IBuyerController interface {
 	GetBuyerByID(c *gin.Context)
 	UpdateBuyer(c *gin.Context)
 	UpdateProductInCart(c *gin.Context)
+	DeleteProductFromCart(c *gin.Context)
 }
 
 type BuyerController struct {
@@ -278,5 +279,72 @@ func (s BuyerController) UpdateProductInCart(c *gin.Context) {
 		Status:  http.StatusOK,
 		Message: "Cart updated successfully",
 		Data:    updatedCart,
+	})
+}
+
+// DeleteProductFromCart godoc
+// @Summary Delete a product from the buyer's cart
+// @Description Deletes the product with the specified productID from the cart
+// @Tags buyer
+// @Accept json
+// @Produce json
+// @Param buyer_id path string true "Buyer ID"
+// @Param product_id path string true "Product ID to delete from cart"
+// @Success 200 {object} dto.SuccessResponse
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /buyer/{buyer_id}/cart/{product_id} [delete]
+func (s BuyerController) DeleteProductFromCart(c *gin.Context) {
+	buyerIDStr := c.Param("buyer_id")
+	productIDStr := c.Param("product_id")
+	userID, exists := c.Get("userID")
+
+	if userID != buyerIDStr || !exists {
+		c.JSON(http.StatusUnauthorized, dto.ErrorResponse{
+			Success: false,
+			Status:  http.StatusUnauthorized,
+			Error:   "Unauthorized",
+			Message: "You are not allowed to modify this cart",
+		})
+		return
+	}
+
+	buyerID, err := primitive.ObjectIDFromHex(buyerIDStr)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, dto.ErrorResponse{
+			Success: false,
+			Status:  http.StatusBadRequest,
+			Error:   "Invalid buyerID format",
+			Message: err.Error(),
+		})
+		return
+	}
+
+	productID, err := primitive.ObjectIDFromHex(productIDStr)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, dto.ErrorResponse{
+			Success: false,
+			Status:  http.StatusBadRequest,
+			Error:   "Invalid productID format",
+			Message: err.Error(),
+		})
+		return
+	}
+
+	err = s.buyerService.DeleteProductFromCart(buyerID, productID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, dto.ErrorResponse{
+			Success: false,
+			Status:  http.StatusInternalServerError,
+			Error:   "Failed to delete product from cart",
+			Message: err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, dto.SuccessResponse{
+		Success: true,
+		Status:  http.StatusOK,
+		Message: "Product deleted from cart successfully",
 	})
 }
